syntax = "proto3";

import "github.com/loomnetwork/go-loom/types/types.proto";

message ParamsV2 {
    uint64 validator_count = 1;
    uint64 vote_allocation = 2;
    int64 election_cycle_length = 3;
    uint64 min_power_fraction = 4;
    Address coin_contract_address = 5;
    uint64 validator_salary = 6;
}

message StateV2 {
    ParamsV2 params = 1;
    repeated Validator validators = 2;
    int64 last_election_time = 3;
}

message VoterV2 {
    Address address = 1;
    uint64 balance = 2;
    Address proxy_address = 3;
    repeated Address principal_addresses = 4;
}

message CandidateV2 {
    Address address = 1;
    bytes pub_key = 2;
}

message CandidateListV2 {
    repeated CandidateV2 candidates = 1;
}

message VoteV2 {
    Address voter_address = 1;
    Address candidate_address = 2;
    uint64 amount = 3;
}

message VoteListV2 {
    repeated VoteV2 votes = 1;
}

message DPOSInitRequestV2 {
    ParamsV2 params = 1;
    repeated Validator validators = 2;
}

message DelegateRequestV2 {
    Address validator_address = 1;
    int64 amount = 2;
}

message DelegateResponseV2 {
}

message RedelegateRequestV2 {
    Address validator_address = 1;
    int64 amount = 2;
}

message RedelegateResponseV2 {
}

message UnbondRequestV2 {
    Address validator_address = 1;
    int64 amount = 2;
}

message UnbondResponseV2 {
}

message RegisterCandidateRequestV2 {
    bytes pub_key = 1;
}

message RegisterCandidateResponseV2 {
}

message UnregisterCandidateRequestV2 {
}

message UnregisterCandidateResponseV2 {
}

message VoteRequestV2 {
    Address candidate_address = 1;
    int64 amount = 2;
}

message VoteResponseV2 {
}

message ElectRequestV2 {
}

message ElectResponseV2 {
}

message ListValidatorsRequestV2 {
}

message ListValidatorsResponseV2 {
    repeated Validator validators = 1;
}

message ListCandidateRequestV2 {
}

message ListCandidateResponseV2 {
    repeated CandidateV2 candidates = 1;
}
